added normal plugin stuff

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,13 @@ name: ${project.name}
 version: ${project.version}
 author: ${author}
 main: ${mainClass}
+
+commands:
+  serversonline:
+    description: Gets how many servers are online.
+    permission: BungeecordMOTDServerCount.user
+
+permissions:
+  BungeecordMOTDServerCount.user:
+    default: true
+    description: Joe's permission.
