--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     compileOnly 'net.md-5:bungeecord-api:1.8-SNAPSHOT'
 }
 
+import org.apache.tools.ant.filters.*
+
 processResources {
-    expand project.properties
+    filter ReplaceTokens, tokens: ["plugin.version": version]
 }
