--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,10 @@ settings:
   # Set amount of seconds to keep the last results.
   cache_time: 60
   # colors for ${color} (depending on the percentage of servers online)
+  colors:
+    # in_betweens has starting value and ending value
+    in_betweens: {0: 24, 25: 74, 75: 100}
+    # all below should be the key of the dictionary, or else it's ignored.
+    0: red
+    25: yellow
+    75: green
